--- a/investments.html
+++ b/investments.html
@@ -45,7 +45,7 @@
         
         body {
             background: linear-gradient(to bottom right, #f8fafc 0%, #e0e7ff 100%);
-            font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Montserrat', sans-serif;
             color: #1e293b;
             min-height: 100vh;
         }
