--- a/index2.html
+++ b/index2.html
@@ -228,14 +228,26 @@
                      <span id="active-target-display" class="bg-gray-800 px-3 py-1 rounded-full border border-gray-700" style="color:#FFF;">10 Reps</span>
                   </div>
                   <!-- Weight Control -->
-                  <div class="flex items-center justify-center gap-6 my-6">
-                     <button onclick="app.handlers.adjustWeight(-1)" class="w-12 h-12 rounded-full bg-gray-800 border border-gray-600 text-xl active:scale-95">-</button>
-                     <div class="text-center">
-                        <span id="active-weight-value" class="text-5xl font-bold font-mono text-white">0</span>
-                        <span class="text-sm text-gray-500 block uppercase">kg</span>
-                     </div>
-                     <button onclick="app.handlers.adjustWeight(1)" class="w-12 h-12 rounded-full bg-gray-800 border border-gray-600 text-xl active:scale-95">+</button>
-                  </div>
+               <!-- Weight Control -->
+<div class="flex items-center justify-center gap-3 my-6">
+   <!-- Pulsanti -5 e -1 -->
+   <div class="flex flex-col gap-1">
+      <button onclick="app.handlers.adjustWeight(-5)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">-5</button>
+      <button onclick="app.handlers.adjustWeight(-1)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">-</button>
+   </div>
+   
+   <!-- Display Peso -->
+   <div class="text-center px-2">
+      <span id="active-weight-value" class="text-5xl font-bold font-mono text-white">0</span>
+      <span class="text-sm text-gray-500 block uppercase">kg</span>
+   </div>
+   
+   <!-- Pulsanti +1 e +5 -->
+   <div class="flex flex-col gap-1">
+      <button onclick="app.handlers.adjustWeight(5)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">+5</button>
+      <button onclick="app.handlers.adjustWeight(1)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">+</button>
+   </div>
+</div>
                </div>
              
                <!-- Timer / Rest Overlay -->
