--- a/index2.html
+++ b/index2.html
@@ -232,8 +232,8 @@
 <div class="flex items-center justify-center gap-3 my-6">
    <!-- Pulsanti -5 e -1 -->
    <div class="flex flex-col gap-1">
-      <button onclick="app.handlers.adjustWeight(-5)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">-5</button>
-      <button onclick="app.handlers.adjustWeight(-1)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">-</button>
+      <button onclick="app.handlers.adjustWeight(-5)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">-0.5 kg</button>
+      <button onclick="app.handlers.adjustWeight(-1)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">+1 kg</button>
    </div>
    
    <!-- Display Peso -->
@@ -244,8 +244,8 @@
    
    <!-- Pulsanti +1 e +5 -->
    <div class="flex flex-col gap-1">
-      <button onclick="app.handlers.adjustWeight(5)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">+5</button>
-      <button onclick="app.handlers.adjustWeight(1)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">+</button>
+      <button onclick="app.handlers.adjustWeight(5)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">+0.5 kg</button>
+      <button onclick="app.handlers.adjustWeight(1)" class="w-10 h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">+1 kg</button>
    </div>
 </div>
                </div>
