--- a/index2.html
+++ b/index2.html
@@ -233,7 +233,7 @@
    <!-- Pulsanti -5 e -1 -->
    <div class="flex flex-col gap-1">
       <button onclick="app.handlers.adjustWeight(-0.5)" style="width: 6.5rem; margin-bottom:7px;" class=" h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">-0.5 kg</button>
-      <button onclick="app.handlers.adjustWeight(-1)" style="width: 6.5rem;" class=" h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">+1 kg</button>
+      <button onclick="app.handlers.adjustWeight(-1)" style="width: 6.5rem;" class=" h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">-1 kg</button>
    </div>
    
    <!-- Display Peso -->
@@ -245,7 +245,7 @@
    <!-- Pulsanti +1 e +5 -->
    <div class="flex flex-col gap-1">
       <button onclick="app.handlers.adjustWeight(0.5)" style="width: 6.5rem; margin-bottom:7px;" class=" h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">+0.5 kg</button>
-      <button onclick="app.handlers.adjustWeight(1)" style="width: 6.5rem;" class=" h-10 rounded-lg bg-gray-800 border border-gray-600 text-lg active:scale-95">+1 kg</button>
+      <button onclick="app.handlers.adjustWeight(1)" style="width: 6.5rem;" class=" h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">+1 kg</button>
    </div>
 </div>
                </div>
@@ -490,7 +490,8 @@
 </div>
 	  
       <!-- AUDIO ELEMENTS -->
-      <audio id="audio-beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
+      <!-- <audio id="audio-beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio> -->
+	   <audio id="audio-beep" src="https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long.ogg" preload="auto"></audio>
       <audio id="audio-complete" src="https://actions.google.com/sounds/v1/cartoon/clank_car_crash.ogg" preload="auto"></audio>
       <!-- LOGIC SCRIPT -->
       <script>
