--- a/index2.html
+++ b/index2.html
@@ -491,8 +491,8 @@
 	  
       <!-- AUDIO ELEMENTS -->
       <!-- <audio id="audio-beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio> -->
-	   <audio id="audio-beep" src="https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long.ogg" preload="auto"></audio>
-      <audio id="audio-complete" src="https://actions.google.com/sounds/v1/cartoon/clank_car_crash.ogg" preload="auto"></audio>
+	   <audio id="audio-beep" src="https://cdn.freesound.org/previews/22/22627_7037-lq.ogg" preload="auto"></audio>
+      <audio id="audio-complete" src="https://cdn.freesound.org/previews/619/619839_7614679-lq.ogg" preload="auto"></audio>
       <!-- LOGIC SCRIPT -->
       <script>
          /**
