--- a/index2.html
+++ b/index2.html
@@ -101,9 +101,9 @@
             <h1 class="font-bold text-lg tracking-tight">WorkoutTracker</h1>
          </div>
          <div class="flex gap-3">
-            <!-- <button id="themeToggle" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition">
+            <button id="themeToggle" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition">
             <i class="fa-solid fa-moon"></i>
-            </button> -->
+            </button>
          </div>
       </header>
       <!-- MAIN CONTENT AREA -->
@@ -188,7 +188,7 @@
 
             <!-- Active Header -->
             <div class="px-4 py-4 flex justify-between items-center border-b border-gray-700">
-               <div class="flex items-center gap-3">
+                <div class="flex items-center gap-3">
         <button onclick="app.handlers.confirmExitWorkout()" class="text-gray-400"><i class="fa-solid fa-xmark text-2xl mr-4"></i></button>
         <button onclick="app.handlers.showWorkoutPreview()" class="text-gray-400"><i class="fa-solid fa-list-ul text-xl"></i></button>
     </div>
