--- a/index2.html
+++ b/index2.html
@@ -158,7 +158,7 @@
          <section id="view-editor" class="view-section p-4 bg-white dark:bg-darkBg min-h-full absolute inset-0 z-30">
             <div class="flex items-center gap-4 mb-6">
                <button onclick="app.router.go('dashboard')" class="p-2 -ml-2 text-gray-500 hover:text-primary"><i class="fa-solid fa-arrow-left text-xl"></i></button>
-               <input type="text" id="editor-name" class="flex-1 text-2xl font-bold bg-transparent border-none focus:ring-0 placeholder-gray-400" placeholder="Nome Workout (es. Leg Day)">
+               <input type="text" id="editor-name" style="padding:5px; border:1px solid #CCC;" class="flex-1  font-bold bg-transparent border-none focus:ring-0 placeholder-gray-400" placeholder="Nome Workout (es. Leg Day)">
             </div>
             <div id="editor-exercises-list" class="space-y-4 mb-20">
                <!-- Exercises injected here via SortableJS -->
