--- a/index2.html
+++ b/index2.html
@@ -101,9 +101,9 @@
             <h1 class="font-bold text-lg tracking-tight">WorkoutTracker</h1>
          </div>
          <div class="flex gap-3">
-            <!-- <button id="themeToggle" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition">
+             <button id="themeToggle" style="visibility:hidden;" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition">
             <i class="fa-solid fa-moon"></i>
-            </button> -->
+            </button> 
          </div>
       </header>
       <!-- MAIN CONTENT AREA -->
