--- a/index2.html
+++ b/index2.html
@@ -455,11 +455,21 @@
                <div>
                   <label class="text-xs text-gray-500 ml-1">Pausa</label>
                   <select id="modal-ex-rest" class="w-full bg-gray-100 dark:bg-gray-800 rounded-lg p-3">
-                     <option value="60">1 minuto</option>
-                     <option value="90" selected>1:30 minuti</option>
-                     <option value="120">2 minuti</option>
-                     <option value="180">3 minuti</option>
-                  </select>
+    <option value="30">30 secondi</option>
+    <option value="60">1 minuto</option>
+    <option value="90" selected>1:30 minuti</option>
+    <option value="120">2 minuti</option>
+    <option value="150">2:30 minuti</option>
+    <option value="180">3 minuti</option>
+    <option value="210">3:30 minuti</option>
+    <option value="240">4 minuti</option>
+    <option value="270">4:30 minuti</option>
+    <option value="300">5 minuti</option>
+    <option value="330">5:30 minuti</option>
+    <option value="360">6 minuti</option>
+    <option value="390">6:30 minuti</option>
+    <option value="420">7 minuti</option>
+</select>
                </div>
                <div>
                   <label class="text-xs text-gray-500 ml-1">Peso Iniziale</label>
@@ -468,7 +478,7 @@
             </div>
             <div class="flex items-center gap-2 bg-gray-50 dark:bg-gray-800 p-3 rounded-lg">
                <input type="checkbox" id="modal-ex-double" class="accent-primary w-5 h-5">
-               <label class="text-sm">Peso doppio (2 manubri)</label>
+               <label class="text-sm">Peso doppio (2 manubri)<br/><small>(usato solo per staistiche per calcoli peso totale)</small></label>
             </div>
             <div class="flex gap-3 mt-4 pt-2">
                <button onclick="document.getElementById('exercise-modal').classList.add('hidden')" class="flex-1 py-3 text-gray-500 font-semibold">Annulla</button>
