--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,15 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
       <style>
+
+		  /* Layout mobile-first responsive */
+@media (min-width: 768px) {
+    body, nav {
+        max-width: 480px;
+        margin: 0 auto;
+        box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+    }
+}
          /* ... (mantieni il tuo stile CSS esistente qui) ... */
          /* Assicurati solo di non aver cancellato i tuoi stili custom */
          body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
