--- a/index2.html
+++ b/index2.html
@@ -233,7 +233,7 @@
                      <span id="active-exercise-count" class="text-gray-400">0/0 es.</span>
                   </div>
                </div>
-               <button onclick="app.handlers.toggleSound()" id="sound-toggle" class="text-gray-400"><i class="fa-solid fa-volume-high"></i></button>
+               <button onclick="app.handlers.toggleSound()" id="sound-toggle" class="text-gray-400 ml-6"><i class="fa-solid fa-volume-high"></i></button>
             </div>
             <!-- Progress Bar -->
             <!-- Progress Bar with Exercise Navigation -->
