--- a/index2.html
+++ b/index2.html
@@ -449,7 +449,8 @@
                <button onclick="app.handlers.resetAllData()" class="w-full border border-red-500 text-red-500 py-2 rounded-lg text-sm font-semibold hover:bg-red-50">Cancellazione Totale</button>
             </div>
             <div class="text-center text-xs text-gray-400 mt-8">
-               WorkoutTracker Web v1.0
+               WorkoutTracker Web v1.0<br/>
+				<i class="fa-regular fa-envelope"></i> Per infomazioni o collaborazioni inviami una email a: <a href="mailto:devcode8493@gmail.com">devcode8493@gmail.com</a>
             </div>
          </section>
       </main>
