--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 
 		  /* Layout mobile-first responsive */
 @media (min-width: 768px) {
-    nav, main, header {
+    nav, main {
         max-width: 480px;
         margin: 0 auto;
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
