--- a/index2.html
+++ b/index2.html
@@ -210,7 +210,7 @@
                </button>
             </div>
             <div class="fixed bottom-6 left-6 z-40">
-               <button onclick="app.handlers.saveWorkout()" class="bg-gray-800 bg-darkBg dark:text-gray-900 text-white px-6 py-3 rounded-full shadow-lg font-bold flex items-center gap-2">
+               <button onclick="app.handlers.saveWorkout()" class="bg-gray-800 bg-white dark:text-gray-900 text-white px-6 py-3 rounded-full shadow-lg font-bold flex items-center gap-2">
                <i class="fa-solid fa-save"></i> Salva
                </button>
             </div>
