Update and rename index2.html to workout-tracker.html

--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -797,7 +797,7 @@ document.getElementById('monthly-fat-burned').innerText = fatBurnedGrams;
                          list.innerHTML = `<div class="text-center p-8 bg-darkBg bg-darkCard rounded-xl shadow-sm">
                              <i class="fa-solid fa-person-running text-4xl text-gray-300 mb-3"></i>
                              <p class="text-gray-500">Nessun workout creato.<br>Inizia creandone uno!</p>
-							 <p onclick="app.router.go('settings')"><br/><br/><i class="fa-solid fa-triangle-exclamation"></i> Prima di iniziare, ricorda di configurare i tuoi parametri nella sezione <strong>Settaggi <i class="fa-solid fa-arrow-right-long"></i></strong></p>
+							 <p onclick="app.router.go('settings')"><br/><br/><i class="fa-solid fa-triangle-exclamation"></i> Prima di iniziare, ricorda di configurare i tuoi parametri nella sezione <strong>Settaggi <i class="fa-solid fa-angle-right"></i></strong></p>
                          </div>`;
                          return;
                      }
