--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -198,7 +198,7 @@
          <section id="view-editor" class="view-section p-4 bg-darkBg bg-darkBg min-h-full absolute inset-0 z-30">
             <div class="flex items-center gap-4 mb-6">
                <button onclick="app.router.go('dashboard')" class="p-2 -ml-2 text-gray-500 hover:text-primary"><i class="fa-solid fa-arrow-left text-xl"></i></button>
-               <input type="text" id="editor-name" style="padding:5px; border:1px solid #CCC;" class="flex-1  font-bold bg-transparent border-none focus:ring-0 placeholder-gray-400" placeholder="Nome Workout (es. Leg Day)">
+               <input type="text" id="editor-name" style="padding:5px 35px 5px 10px; border:1px solid #CCC;" class="flex-1  font-bold bg-transparent border-none focus:ring-0 placeholder-gray-400" placeholder="Nome Workout (es. Leg Day)">
             </div>
             <div id="editor-exercises-list" class="space-y-4 mb-20">
                <!-- Exercises injected here via SortableJS -->
@@ -215,7 +215,7 @@
                </button>
             </div>
             <div class="fixed top-20 right-4 z-40">
-               <button onclick="app.handlers.deleteWorkout()" id="btn-delete-workout" class="text-red-500 p-2 hidden">
+               <button onclick="app.handlers.deleteWorkout()" id="btn-delete-workout" class="text-red-500 p-2 hidden" style="margin-top: -12px;">
                <i class="fa-solid fa-trash"></i>
                </button>
             </div>
