--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -521,7 +521,7 @@
             </div>
             <div class="flex items-center gap-2 bg-gray-50 bg-gray-800 p-3 rounded-lg">
                <input type="checkbox" id="modal-ex-double" class="accent-primary w-5 h-5">
-               <label class="text-sm">Peso doppio (2 manubri)<br/><small>(usato solo per staistiche per calcoli peso totale)</small></label>
+               <label class="text-sm">Peso doppio (es. 2 manubri)<br/><small>(usato solo per statistiche per calcoli peso totale)</small></label>
             </div>
             <div class="flex gap-3 mt-4 pt-2">
                <button onclick="document.getElementById('exercise-modal').classList.add('hidden')" class="flex-1 py-3 text-gray-500 font-semibold">Annulla</button>
