--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -244,7 +244,7 @@
             <i class="fa-solid fa-list-ul text-xl text-gray-400"></i>
 
             <div class="text-left">
-                <h3 id="active-workout-name" class="font-bold text-sm text-gray-300">
+                <h3 id="active-workout-name" class="font-bold text-xs text-gray-300">
                     A – Upper Push (Petto alto &amp; Spalle)
                 </h3>
                 <div class="flex items-center gap-2 text-xs">
