--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -896,7 +896,7 @@ document.getElementById('monthly-fat-burned').innerText = fatBurnedGrams;
          // Progress Bar
          const totalExercises = session.workout.exercises.length;
          const currentExercise = session.currentExIdx + 1;
-         document.getElementById('active-exercise-count').innerText = `${currentExercise}/${totalExercises} es.`;
+         document.getElementById('active-exercise-count').innerText = `Esercizio: ${currentExercise}/${totalExercises}`;
          
          const totalSets = session.workout.exercises.reduce((acc, e) => acc + parseInt(e.sets), 0);
          const completedSets = session.workout.exercises.slice(0, session.currentExIdx).reduce((acc,e) => acc + parseInt(e.sets), 0) + session.currentSet;
