--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -222,8 +222,8 @@
                <i class="fa-solid fa-save"></i> Salva
                </button>
             </div>
-            <div class="fixed top-20 right-4 z-40">
-               <button onclick="app.handlers.deleteWorkout()" id="btn-delete-workout" class="text-red-500 p-2 hidden" style="margin-top: -12px;">
+            <div class="fixed right-4 z-40" style="top: 69px;">
+               <button onclick="app.handlers.deleteWorkout()" id="btn-delete-workout" class="text-red-500 p-2 hidden">
                <i class="fa-solid fa-trash"></i>
                </button>
             </div>
