--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -375,7 +375,7 @@
                      <i class="fa-solid fa-dumbbell text-primary text-4xl mb-3 animate-pulse"></i>
                      <span class="text-gray-400 text-sm uppercase tracking-widest block">Serie in corso</span>
                      <!-- ✨ AGGIUNGI TIMER ESERCIZIO -->
-                     <span class="text-gray-400 text-sm  tracking-widest block">Iniziata da: <span id="exercise-timer">00:00</span></span>
+                     <span class="text-gray-400 text-sm  tracking-widest block">Iniziata da: <span id="exercise-timer" style="font-weight:bold;">00:00</span></span>
                      <span id="motivational-text" class="text-xl font-bold mt-2 block">Dai il massimo! 💪</span>
                      <div id="exercise-notes-container" class="mt-4 hidden">
                         <button onclick="app.handlers.toggleNotes()" class="bg-gray-800 hover:bg-gray-700 px-4 py-2 rounded-lg text-sm flex items-center gap-2 mx-auto transition">
