--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -45,9 +45,11 @@
 
          #exercise-modal input, #exercise-modal textarea{
          border:1px solid #5127f2;
+		 background-color:#1f2937;
          }
          #exercise-modal select{
          border:1px solid #5127f2;
+		 background-color:#1f2937;
          }
          @keyframes blink-rest {
          0%, 100% { opacity: 1; }
