--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -324,7 +324,7 @@
             <div class="bg-white/20 rounded-lg p-2">
                <i class="fa-solid fa-droplet text-lg"></i>
             </div>
-            <span class="opacity-80">g <br/>Grasso</span>
+            <span class="opacity-80">gr di <br/>Grasso</span>
          </div>
          <span id="monthly-fat-burned" class="text-3xl font-bold block">0</span>
       </div>
