--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -1337,6 +1337,7 @@ if (todayWorkouts.length > 0) {
 }
 		 
                      // Render Workouts
+					 list.innerHTML += `<h3 class="p-3 rounded-xl shadow-sm font-bold text-lg mb-3 flex items-center justify-center gap-2 text-center">📂 Tutti i tuoi Workout salvati</h3>`;
                      if (app.state.workouts.length === 0) {
                          list.innerHTML = `<div class="relative overflow-hidden bg-gradient-to-br from-darkCard to-gray-900 rounded-2xl shadow-xl p-8 border border-gray-800">
    <!-- Decorative elements -->
