--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -450,7 +450,17 @@ if (currentMonthEl) {
                   </div>
                </div>
                <div class="h-1 bg-gray-800 w-full">
-                  <div id="active-progress-bar" class="h-full bg-primary transition-all duration-300 relative" style="width: 0%"></div>
+                  <div id="active-progress-bar" class=" relative h-full bg-primary transition-all duration-300 relative" style="width: 0%">
+				  <div style="
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #a68ef8;
+    border-radius: 50%;
+    top: -2px;
+    right: 0px;
+"></div>
+				  </div>
                </div>
             </div>
             <!-- Main Exercise Area -->
