--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -406,8 +406,8 @@ if (currentMonthEl) {
 			</div>
          </section>
          <!-- VIEW: ACTIVE WORKOUT MODE -->
-         <section id="view-active" class="view-section bg-gray-900 text-white h-screen absolute inset-0 z-50 flex flex-col overflow-hidden">
-		 <div class="internal-section">
+         <section id="view-active" class="view-section bg-gray-900 text-white ">
+		 <div class="internal-section h-screen absolute inset-0 z-50 flex flex-col overflow-hidden">
             <!-- Active Header -->
             <div class="px-4 py-4 flex items-center border-b border-gray-700">
                <!-- Sinistra -->
@@ -546,7 +546,7 @@ if (currentMonthEl) {
                         </div>
                      </div>
                   </div>
-				  <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+				  
                </div>
             </div>
             <!-- Controls Footer -->
@@ -2422,7 +2422,7 @@ startExerciseTimer: () => {
 toggleNotes: () => {
     const content = document.getElementById('exercise-notes-content');
     const chevron = document.getElementById('notes-chevron');
-    const scrollContainer = document.querySelector('#view-active > div.flex-1.overflow-y-auto');
+    const scrollContainer = document.querySelector('.internal-section > div.flex-1.overflow-y-auto');
     
     if (content.classList.contains('hidden')) {
         content.classList.remove('hidden');
