--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -550,7 +550,7 @@ if (currentMonthEl) {
                      <div id="exercise-notes-container" class="mt-4 hidden">
                         <button onclick="app.handlers.toggleNotes()" class="bg-gray-800 hover:bg-gray-700 px-4 py-2 rounded-lg text-sm flex items-center gap-2 mx-auto transition">
                         <i class="fa-regular fa-note-sticky"></i>
-                        <span>Leggi<br/> Note</span>
+                        <span>Leggi Note</span>
                         <i id="notes-chevron" class="fa-solid fa-chevron-down text-xs"></i>
                         </button>
                         <div id="exercise-notes-content" class="hidden  bg-gray-800 rounded-lg p-4 text-left text-sm text-gray-300 max-w-md mx-auto">
