--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -398,7 +398,7 @@ if (currentMonthEl) {
                </button>
             </div>
             <div class="fixed bottom-6 left-6 z-40">
-               <button onclick="app.handlers.saveWorkout()" class="bg-gray-800 bg-white dark:text-gray-900 px-6 py-3 rounded-full shadow-lg font-bold flex items-center gap-2">
+               <button onclick="app.handlers.saveWorkout()" class="bg-white text-black px-6 py-3 rounded-full shadow-lg font-bold flex items-center gap-2">
                <i class="fa-solid fa-save"></i> Salva
                </button>
             </div>
